--- a/Frontend/Client/package.json
+++ b/Frontend/Client/package.json
@@ -9,14 +9,24 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-regular-svg-icons": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/react-fontawesome": "^0.1.19",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.1.1",
+        "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.4",
+        "date-fns": "^2.28.0",
         "dotenv": "^16.0.3",
         "react": "^18.2.0",
+        "react-date-range": "^1.4.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.9.0"
     },
     "devDependencies": {
         "@types/react": "^18.0.28",
+        "@types/react-date-range": "^1.4.5",
         "@types/react-dom": "^18.0.11",
         "@vitejs/plugin-react": "^3.1.0",
         "typescript": "^4.9.3",
