--- a/Frontend/Client/tsconfig.node.json
+++ b/Frontend/Client/tsconfig.node.json
@@ -2,8 +2,13 @@
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
+    "allowJs": true,     // Allow JavaScript files
+    "jsx": "react",
     "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true
+
   },
   "include": ["vite.config.ts"]
 }
