--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,8 +11,17 @@
         "autogit": "git add . && git commit -F Com.txt && git push",
         "prehandlerest": "npm run build",
         "handlerest": "node go.js"
-    },
+    }, 
     "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
+    "react-date-range": "^1.4.0",
         "axios": "^0.27.2",
         "body-parser": "^1.20.0",
         "cors": "^2.8.5",
@@ -23,17 +32,18 @@
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.11.0",
         "mongoose": "^6.6.1",
+        "react": "^18.2.0",
         "vite-plugin-svgr": "^2.4.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.20",
-        "jsdom": "^21.1.1",
-        "rimraf": "^4.3.1",
         "@types/cors": "^2.8.13",
         "@types/crypto-js": "^4.1.1",
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/mongoose": "^5.11.97",
-        "@types/node": "^18.14.6"
+        "@types/node": "^18.14.6",
+        "jsdom": "^21.1.1",
+        "nodemon": "^2.0.20",
+        "rimraf": "^4.3.1"
     }
 }
